--- a/main.html
+++ b/main.html
@@ -4,11 +4,65 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	
 </head>
 
 <body>
+	<div class="container-fluid ">
+		<div class="row-1 col-sm-1">
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+		</div>
+		<div class="row-2 col-sm-2">
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			
+			
+		</div>
+		<div class="row-3 col-sm-4">
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			
+		</div>
+		<div class="row-4 col-sm-12">
+			<img class="all-img" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </script>
 
 </body>
