--- a/main.html
+++ b/main.html
@@ -10,38 +10,38 @@
 
 <body>
 	<div class="container-fluid ">
-		<div class="row-1 col-sm-1">
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+		<div class="row-1">
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
 		</div>
-		<div class="row-2 col-sm-2">
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+		<div class="row-2 ">
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-2" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
 			
 			
 		</div>
-		<div class="row-3 col-sm-4">
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+		<div class="row-3">
+			<img class="all-img col-sm-4" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+			<img class="all-img col-sm-4" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
+			<img class="all-img col-sm-4" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" />
 			
 		</div>
-		<div class="row-4 col-sm-12">
-			<img class="all-img col-1" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
+		<div class="row-4 ">
+			<img class="all-img col-sm-12" src="https://i.pinimg.com/564x/ce/40/59/ce40599fb6685550e896d01b0b33dfc2.jpg" /> 
 			
 		</div>
 	</div>
